<resources>
    <string name="app_name">Milk</string>
    <string name="action_settings">Settings</string>
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="person_name">Name</string>
    <string name="mobile">Mobile No.</string>
    <string name="address">Address</string>
    <string name="qty">Quantity</string>
    <string name="price">Price</string>
    <string name="litres">in litres</string>
    <string name="currency">in INR</string>
    <string name="save">Save</string>
    <string name="cow">Cow`s milk</string>
    <string name="buffalo">Buffalo</string>
    <string name="error_msg_save">Unable to save details, please try again later</string>
    <string name="error_msg_fetch">Unable to fetch details , please try again later</string>
    <string name="success_save">Successfully saved details</string>
    <string name="offline_save">Saved to offline db..</string>
    <string name="gircow">Gir</string>
    <string name="code">Code</string>

    <string-array name="spinner_type">
        <item>Customer</item>
        <item>Supplier</item>
    </string-array>

    //Error msgs
    <string name="err_name">Name field is empty</string>
    <string name="err_mobile">Enter valid mobile number</string>
    <string name="err_address">Address field is empty</string>

    <string name="prev_unit_price">Previous Unit Price</string>
    <string name="unit_price">Unit Price</string>
    <string name="total">Total</string>
    <string name="paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="mrp">MRP</string>
    <string name="selling_price">Selling Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
