<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="Sign in text on registration activity"
                    app:srcCompat="@drawable/sign_in" />

                <AutoCompleteTextView
                    android:id="@+id/atvEmailLog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_person"
                    android:drawableLeft="@drawable/icon_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/emailReg"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Test"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/atvPasswordLog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_password"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/passwordReg"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/gray" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsignin_gradient"
                    android:text="@string/sign_inLog"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup_redirect"
                    android:textColor="@color/gray" />


            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>