<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivJoinUs"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/joinus_text" />

                <AutoCompleteTextView
                    android:id="@+id/atvUsernameReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_person"
                    android:drawableLeft="@drawable/icon_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/usernameReg"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/atvEmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_mail"
                    android:drawableLeft="@drawable/icon_mail"
                    android:drawablePadding="10dp"
                    android:hint="@string/emailReg"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/atvPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_password"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/passwordReg"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btnsignup_gradient"
                    android:text="@string/sign_upReg"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/signin_redirect"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
