<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/ip_code"
        android:layout_margin="@dimen/layout_margin"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_code"
            android:clickable="false"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/code"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textsize_18"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/ip_name"
        android:layout_below="@+id/ip_code"
        android:layout_margin="@dimen/layout_margin"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/person_name"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textsize_18"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/ip_mobile"
        android:layout_below="@+id/ip_name"
        android:layout_margin="@dimen/layout_margin"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/mobile"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textsize_18"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/ip_address"
        android:layout_below="@+id/ip_mobile"
        android:layout_margin="@dimen/layout_margin"
        android:layout_height="80dp">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textsize_18"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/spinner_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip_address"
        android:layout_margin="@dimen/layout_margin"
      >

        <Spinner
            android:id="@+id/sp_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            style="@android:style/Widget.Holo.Light.Spinner" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_relative"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/layout_margin"
        android:background="@drawable/btnsignin_gradient"
        android:text="@string/save"
        android:textColor="#FFFFFF" />

</RelativeLayout>